--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Henry's Portfólio</title>
 </head>
 
-<body class="flexbox">
-    <main class="flexbox center">
+<body>
+    <main>
         <a href="#header">
-            <div class="flexbox voltar-ao-sumario">
+            <div class="voltar-ao-sumario">
                 <h2>⇧</h2>
             </div>
         </a>
